<resources>
    <string name="app_name">Civil War Generals</string>
    <string name="hello_world">Civil War Generals</string>
    <string name="action_settings">Settings</string>
    <string name="union">Union</string>
    <string name="confederate">Confederate</string>
    <string name="all">All</string>
    <string name="infobutton">Help</string>
    <string name="info">Civilwargenerals contains facts and history of all generals of the US Civil War.  There is a page for every general, hundreds of images and a searchable database.  The Pictures button allows you to scroll through a long list of generals.  The three text boxes, and their triggering Search button, search the database of text associated wth every general.  You may fill in any or all three text boxes.  Search terms are <b>NOT</b> case-sensitive.  Please <b>DO NOT</b> use quotes because search phrases are automatically quoted (assumed to be exact).  For example if you enter into the three text boxes:\n\n<b>killed</b>\n<b>at night</b>\n<b>shiloh</b>\n\n...and hit the Search button, it will retrieve the 2 generals that have all three of those exact phrases somewhere on the page for the general.  Search rules are simple but not as easy as Google.  As another example, if you want to find all of the carriers that have both of the words <b>ship</b> and <b>sunk</b> anywhere, then you would <b>NOT</b> search in the first box for this\n\n<b>ship sunk</b>\n\n...as you would on Google.  Instead you will want to put one term by itself in one of the three search boxes, like this\n\n<b>ship</b>\n<b>sunk</b>\n\nPutting both words into one search box will search for the exact phrase <b>ship sunk</b>, and in this example, will return zero results.  Separate boxes will yield eleven results for this ship and sunk example.  Word fragments work and so <b>183</b> will find generals with any reference to a year in the 1830s.\nAll text and imagery are under the license found here: en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution&#8211;ShareAlike_3.0_Unported_License\nAll thanks go to civil war enthusiasts everywhere and to the wiki editors who wrote the information found here.  There are errors and omissions in this data.  Get the most accurate and up to date information here en.wikipedia.org/wiki/American_Civil_War\n</string>
    <string name="general">General</string>
    <string name="backbutton">back</string>
    <string name="nextbutton">next</string>
    <string name="backbuttonten">back 10</string>
    <string name="nextbuttonten">next 10</string>
    <string name="picturename">General</string>
    <string name="viewgeneral">View General</string>
    <string name="searchhint">single word, or exact phrase, no quotes, case insensitive</string>
    <string name="searchforcarriers">Search</string>
    <string name="pictures">Pictures</string>
</resources>